# game-engine_c-

./: .gitignore  CMakeLists.txt  Makefile  mainScript.sh
.build/: hello_world
resource/model/cube/: cube.mtl
resource/user/: mainUser.json
scripts/: cleanRun.sh  remakeRun.sh  run.sh
src/: ]  hello_world.cpp  main.cpp
src/include/: OBJ_Loader.h
src/manger/: window.cpp  window.h
src/manger/inputs/: inputMaster.cpp  inputMaster.h  inputPlayer.cpp  inputPlayer.h  keyboard.cpp  keyboard.h
src/manger/model/: defualtItemManger.cpp  defualtItemManger.h  modelMangerMaster.cpp  modelMangerMaster.h
src/manger/ui/font/: FontRenderer.cpp  FontRenderer.h
src/manger/ui/shape/: rectangle.h  settings.cpp  settings.h
src/models/: myObjLoader.cpp  myObjLoader.h  obj_loader.cpp  obj_loader.h
src/user/: camera.cpp  camera.h  player.cpp  player.h
src/utils/: string.h
src/utils/color/: rgb_control.cpp  rgb_control.h
src/utils/const/: windowConst.h
src/utils/fileLoad/: readJson.h
src/utils/number/: number_limits.cpp  number_limits.h
src/utils/object/: customStructs.h  hitBox.cpp  hitBox.h  meshData.h  transform.h
src/utils/texture/: textureLoader.cpp  textureLoader.h
src/utils/units/: matrix.h
src/utils/units/vector/: vector3f.h
